--- a/src/app/box-editor/box-editor.component.html
+++ b/src/app/box-editor/box-editor.component.html
@@ -14,6 +14,6 @@
             <option value="blue">Blue</option>
         </select>
         <br />
-        <img src="assets/IMG_5035.jpg" id="image" class="frame" />
+        <img src="assets/IMG_7479.JPG" id="image" class="frame" />
     </div>
 </div>
