--- a/src/app/main.component.html
+++ b/src/app/main.component.html
@@ -1,10 +1,10 @@
 <div>
     <div class="header">
-        <div class="title">Sean's Website</div>
+        <div class="title">ARTEMIS</div>
     </div>
-    <p id="example-text">Welcome to the HTML side!</p>
-    <p id="example-target"></p>
+    <p id="example-text">this is my goofy greek girlfriend</p>
+    <!--<p id="example-target"></p><!-->
     <div id="boop-button"></div>
-    <div id="calculator"></div>
+    <!--<div id="calculator"></div><!-->
     <div id="box"></div>
 </div>
