--- a/src/app/boop-button/boop-button.component.html
+++ b/src/app/boop-button/boop-button.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button id="booper">Boop!</button>
-    <p>Boop record: <span id="boops"></span></p>
+    <button id="booper">Press for la gatita</button>
+    <p>La gatita: <span id="boops"></span></p>
 </div>
 >
